feat: updated login to return a obj with _id, full_name and authenticated for front end, also auth-token header that is used for auth on backend
