# server/controllers/userController.js
@@ -11,17 +11,22 @@ const loginUser = async (req, res) => {
     }
     const user = await dataController.getUserFromDB("email", email);
     // Check if user exists and the password matches
-    if (user && (await bcrypt.compare(password, user.password))) {
+    const authUser = await bcrypt.compare(password, user.password);
+
+    if (user && authUser) {
       // Create Token
       const token = jwt.sign(
-        { user_id: user._id, email },
-        process.env.TOKEN_KEY,
-        { expiresIn: "2h" }
+        { _id: user._id, email: email },
+        process.env.TOKEN_KEY
       );
-      // Save the token to the user object
-      user.token = token;
       // Return the user with the token
-      return res.status(200).json({ ...user });
+      res.user = {
+        _id: user._id,
+        authenticated: true,
+        full_name: user.full_name,
+      };
+      // Return auth-token header and res.user back to requester
+      return res.header("auth-token", token).status(200).json(res.user);
     }
     res.status(401).json({ message: "Invalid Credentials" });
   } catch (err) {
